policies/require-ro-rootfs/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-ro-rootfs
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-ro-rootfs
    rule: require-ro-rootfs
    kind: Pod
    resources:
      - good-pod-ro
    result: pass
  - policy: require-ro-rootfs
    rule: require-ro-rootfs
    kind: Pod
    resources:
      - bad-pod-writable
    result: fail
